--- a/DotnetFinancialTrackerApp/Components/_Imports.razor
+++ b/DotnetFinancialTrackerApp/Components/_Imports.razor
@@ -7,6 +7,7 @@
 @using Microsoft.JSInterop
 @using DotnetFinancialTrackerApp
 @using DotnetFinancialTrackerApp.Components
+@using DotnetFinancialTrackerApp.Components.Shared
 @using DotnetFinancialTrackerApp.Models
 @using DotnetFinancialTrackerApp.Services
 @using DotnetFinancialTrackerApp.Components.Layout
